Change only dropdown parent button when choosing from menu.

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -103,7 +103,7 @@
       <p>Svoju izbornu jedinicu možete provjeriti <a href="https://biraci.gov.hr/RegistarBiraca/" target="_blank"> ovdje </a>.</p>
       <!-- Izborne jedinice -->
       <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+        <button id="default-vr-dropdown" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
            Izaberite izbornu jedinicu...<span class="caret"></span>
         </button>
         <ul id="voting-region"  class="dropdown-menu" role="menu">
