--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -28,6 +28,7 @@
 
 <link rel="stylesheet" href="../css/base.css" type="text/css" media="all" />
 
+<script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
