--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -98,36 +98,39 @@
 
     <div id="results" style="display:none;"> <!-- class="results-hidden"> -->
 
-    <h2>Dodatna pitanja</h2>
-      <p>Iz koje ste izborne jedinice?</p>
-      <p>Svoju izbornu jedinicu možete provjeriti <a href="https://biraci.gov.hr/RegistarBiraca/" target="_blank"> ovdje </a>.</p>
-      <!-- Izborne jedinice -->
-      <div class="btn-group">
-        <button id="default-vr-dropdown" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-           Izaberite izbornu jedinicu...<span class="caret"></span>
-        </button>
-        <ul id="voting-region"  class="dropdown-menu" role="menu">
-          <li region_id="1"><a href="#">I. izborna jedinica</a></li>
-          <li region_id="2"><a href="#">II. izborna jedinica</a></li>
-          <li region_id="3"><a href="#">III. izborna jedinica</a></li>
-          <li region_id="4"><a href="#">IV. izborna jedinica</a></li>
-          <li region_id="5"><a href="#">V. izborna jedinica</a></li>
-          <li region_id="6"><a href="#">VI. izborna jedinica</a></li>
-          <li region_id="7"><a href="#">VII. izborna jedinica</a></li>
-          <li region_id="8"><a href="#">VIII. izborna jedinica</a></li>
-          <li region_id="9"><a href="#">IX. izborna jedinica</a></li>
-          <li region_id="10"><a href="#">X. izborna jedinica</a></li>
-          <li region_id="11"><a href="#">XI. izborna jedinica (Dijaspora)</a></li>
-          <li region_id="12"><a href="#">XII. izborna jedinica (Manjine)</a></li>
-        </ul>
+      <h2>Dodatna pitanja</h2>
+      <div style="padding-left:20px;">
+        <h4>Iz koje ste izborne jedinice?</h4>
+        <p>Svoju izbornu jedinicu možete provjeriti <a href="https://biraci.gov.hr/RegistarBiraca/" target="_blank"> ovdje </a>.</p>
+        <!-- Izborne jedinice -->
+        <div class="btn-group">
+          <button id="default-vr-dropdown" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            Izaberite izbornu jedinicu...<span class="caret"></span>
+          </button>
+          <ul id="voting-region"  class="dropdown-menu" role="menu">
+            <li region_id="1"><a href="#">I. izborna jedinica</a></li>
+            <li region_id="2"><a href="#">II. izborna jedinica</a></li>
+            <li region_id="3"><a href="#">III. izborna jedinica</a></li>
+            <li region_id="4"><a href="#">IV. izborna jedinica</a></li>
+            <li region_id="5"><a href="#">V. izborna jedinica</a></li>
+            <li region_id="6"><a href="#">VI. izborna jedinica</a></li>
+            <li region_id="7"><a href="#">VII. izborna jedinica</a></li>
+            <li region_id="8"><a href="#">VIII. izborna jedinica</a></li>
+            <li region_id="9"><a href="#">IX. izborna jedinica</a></li>
+            <li region_id="10"><a href="#">X. izborna jedinica</a></li>
+            <li region_id="11"><a href="#">XI. izborna jedinica (Dijaspora)</a></li>
+            <li region_id="12"><a href="#">XII. izborna jedinica (Manjine)</a></li>
+          </ul>
+        </div>
+
+        <p>I još pitanja... :) </p>
+        <button id="button-submit-extra" class="btn btn-lg btn-default">Pošalji odgovore na dodatna pitanja</button>
+        <hr/>
       </div>
 
-      <p>I još pitanja... :) </p>
-    <hr/>
-
-    <h2>Rezultati za vaše prijatelje</h2>
-    <p>Ovdje prikazujemo rezultate za prijatelje.</p>
-    <p>Glasovali ste za <span id="current-vote"></span>, i predviđate da će dobit <span id="current-meta"></span>% glasova na izborima.</p>
+      <h2>Rezultati za vaše prijatelje</h2>
+      <p>Ovdje prikazujemo rezultate za prijatelje.</p>
+      <p>Glasovali ste za <span id="current-vote"></span>, i predviđate da će dobit <span id="current-meta"></span>% glasova na izborima.</p>
 
     </div>
  
