Bar chart showing statistics of friends

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -27,19 +27,21 @@
   href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> -->
 
 <link rel="stylesheet" href="../css/base.css" type="text/css" media="all" />
+<link rel="stylesheet" href="../css/charts.css" type="text/css" media="all" />
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
-  <script type="text/javascript">
-    var current_vote = -1; // 2; //-1;
-    var current_meta = "";
-    var current_voting_region = -1;
-    // var global_results_raw = "-1";
-    // var friends_results_raw = "-1";
-  </script>
-  <script src="../js/functions.js"></script>
+<script type="text/javascript">
+  var current_vote = -1; // 2; //-1;
+  var current_meta = "";
+  var current_voting_region = -1;
+  // var global_results_raw = "-1";
+  // var friends_results_raw = "-1";
+</script>
+<script src="../js/functions.js"></script>
+
 
 </head>
 <body>
