--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -105,7 +105,7 @@
         <!-- Izborne jedinice -->
         <div class="btn-group">
           <button id="default-vr-dropdown" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            Izaberite izbornu jedinicu...<span class="caret"></span>
+            <span id="chosen-field-text">Izaberite izbornu jedinicu...</span> <span class="caret"></span>
           </button>
           <ul id="voting-region"  class="dropdown-menu" role="menu">
             <li region_id="1"><a href="#">I. izborna jedinica</a></li>
