Added percentage slider

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -27,6 +27,7 @@
   href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> -->
 
 <link rel="stylesheet" href="../css/base.css" type="text/css" media="all" />
+<link rel="stylesheet" href="../css/bootstrap-slider.css" type="text/css" media="all" />
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
@@ -39,6 +40,7 @@
     // var friends_results_raw = "-1";
   </script>
   <script src="../js/functions.js"></script>
+  <script src="../js/bootstrap-slider.js"></script>
 
 </head>
 <body>
@@ -86,7 +88,9 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Procijenite koliko će vaša stranka osvojiti glasova na izborima.</h2>
-        <input id="question-meta" type="text" class="form-control" placeholder="unesite postotak" aria-describedby="basic-addon1" style="width:200px">
+        <div class="slider-row">
+          <input id="question-meta" type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50"/>
+        </div>
       </div>
     </div>
 
