Change vertical bar chart to horizontal

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -135,6 +135,8 @@
       <p>Ovdje prikazujemo rezultate za prijatelje.</p>
       <p>Glasovali ste za <span id="current-vote"></span>, i predviđate da će dobit <span id="current-meta"></span>% glasova na izborima.</p>
 
+      <div id="statistics-of-friends"></div>
+
     </div>
  
   </div>
