--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="row text-center">
-          <img src="static/images/logo.png" alt="sabor2015.hr" class="header-logo" />
+          <img src="static/images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
         </div>
       </div>
 
