--- a/static/html/faq.html
+++ b/static/html/faq.html
@@ -41,7 +41,7 @@
 
   <div class="container">   
     <div class="row text-center">
-      <img src="../images/logo.png" alt="sabor2015.hr" class="header-logo" />
+      <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
     </div>
   </div>
 
