--- a/static/html/mape.html
+++ b/static/html/mape.html
@@ -27,7 +27,16 @@ content="http://referendum2013.hr/static/images/logo.png" />
 href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> -->
 
 <link rel="stylesheet" href="../css/base.css" type="text/css" media="all" />
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.css" />
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+
+<script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
+<script src="../js/leaflet-kml.js"></script>
+<script src="../js/mape.js"></script>
 
 </head>
 <body>
@@ -47,9 +56,7 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 
 <hr />
 <div class="container">
-<div class="row text-center">
-<iframe src="https://www.google.com/maps/d/u/0/embed?mid=zBvANQ30llsA.k6o63oGopwTw" 
-width="640" height="480"></iframe>
+<div id="map" style="height: 600px; width: 600px" class="row text-center">
 </div>
 </div>
 </div>
@@ -60,9 +67,6 @@ width="640" height="480"></iframe>
 <p>@referendum2013.hr</p>
 </footer>
 </div>  
-
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
 
 <!-- <script type="text/javascript">
