Lists of parties now have short names.

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -97,6 +97,7 @@
         <h3>Za koga ćete glasati na izborima?</h3>
         <!-- size="2" is a workaround so that first option is not automatically selected https://github.com/davidstutz/bootstrap-multiselect/issues/129 -->
         <select id="question-vote" size="2"></select >
+        <div id="currently-selected-party-label"></div>
       </div>
 
     </div>
