--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -111,6 +111,7 @@
         <div class="col-md-12">
 
           <h2>Rezultati za vaše prijatelje</h2>
+          <p>Ukupno je <span id="total-votes-friends" class="badge"></span> vaših prijatelja glasalo.</p>
           <statistics-of-friends></statistics-of-friends>
 
         </div>
