Simple time chart showing number of votes in time.

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -114,6 +114,9 @@
           <p>Ukupno je <span id="total-votes-friends" class="badge"></span> vaših prijatelja glasalo.</p>
           <statistics-of-friends></statistics-of-friends>
 
+          <p>Ukupno je <span id="total-votes" class="badge"></span> korisnika glasalo.</p>
+          <votes-in-time></votes-in-time>
+
         </div>
       </div>
 
