--- a/static/html/mape.html
+++ b/static/html/mape.html
@@ -39,27 +39,38 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 <script src="../js/mape.js"></script>
 
 </head>
+
 <body>
+
 <div class="navbar navbar-default navbar-static-top" role="navigation">
-<div class="container">
-<div class="navbar-header">
-<a class="navbar-brand" href="/">sabor2015.hr</a>
-</div>
-</div>
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">sabor2015.hr</a>
+    </div>
+  </div>
 </div>
 
 <div class="container">   
-<div class="row text-center">
-<img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
-</div>
+  <div class="row text-center">
+    <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
+  </div>
 </div>
 
 <hr />
+
 <div class="container">
-<div id="map" style="height: 600px; width: 600px" class="row text-center">
+
+  <div class="row">
+    <div class="col-md-6">
+      <div id="map" style="height: 500px; width: 500px" class="row text-center"></div>
+    </div>
+    <div class="col-md-6">
+      <img src="../images/izborne-labele.png" style="height: 500px; width: 500px"/>
+    </div>
+  </div>
+
 </div>
-</div>
-</div>
+
 
 <hr/>
 <div class="container">
