--- a/static/html/mape.html
+++ b/static/html/mape.html
@@ -32,11 +32,16 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
+<script src="../js/angular.min.js"></script>
+
 <script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
 <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
 <script src="../js/leaflet-kml.js"></script>
 <script src="../js/mape.js"></script>
+
+<script src="../js/fuse.min.js"></script>
+<script src="../js/find-region.js"></script>
 
 </head>
 
@@ -69,10 +74,23 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
     </div>
   </div>
 
+  <hr/>
+
+  <div ng-app="findRegion" ng-controller="findRegionCTRL">
+    <div class="row">
+      <h2>Pretraga po lokaciji</h2>
+      <p>Unesite svoje mjesto, općinu, grad ili mjesni odbor (za Zagreb):</p>
+      <find-region></find-region>
+    </div>
+  </div>
+
 </div>
 
 
 <hr/>
+
+<div style="height:100px;clear:both;"></div>
+
 <div class="container">
 <footer>
 <p>@referendum2013.hr</p>
