Animated logo that shows total number of votes.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <!-- <link rel="stylesheet" href="{{ STATIC_URL }}css/base.css" type="text/css" media="all" /> -->
   <link rel="stylesheet" href="static/css/base.css" type="text/css" media="all" />
 
+  <script src="static/js/angular.min.js"></script>
+
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <!-- // <script src="{{ STATIC_URL }}js/csrf.js"></script> -->
@@ -38,6 +40,8 @@
     var friends_results_raw = "-1";
   </script>
   <!-- <script src="static/js/functions.js"></script> -->
+
+  <script src="static/js/progress-chart.js"></script>
 
 </head>
 <body>
@@ -82,7 +86,10 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="row text-center">
-          <img src="static/images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
+          <!-- <img src="static/images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
+          <div ng-app="progressChart" ng-controller="progressChartCTRL">
+            <progress-chart></progress-chart>
+          </div>
         </div>
       </div>
 
