--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -43,6 +43,8 @@
 <script src="../bootstrap-multiselect/bootstrap-multiselect.js"></script>
 <link rel="stylesheet" href="../bootstrap-multiselect/bootstrap-multiselect.css" type="text/css" media="all" />
 
+<script src="../js/progress-chart.js"></script>
+
 </head>
 <body>
   <div class="navbar navbar-default navbar-static-top" role="navigation">
@@ -55,7 +57,10 @@
 
   <div class="container">   
     <div class="row text-center">
-      <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
+      <!-- <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
+      <div ng-app="progressChart" ng-controller="progressChartCTRL">
+        <progress-chart></progress-chart>
+      </div>
     </div>
   </div>
 
