--- a/static/html/mape.html
+++ b/static/html/mape.html
@@ -33,6 +33,7 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
 <script src="../js/angular.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
@@ -42,6 +43,8 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 
 <script src="../js/fuse.min.js"></script>
 <script src="../js/find-region.js"></script>
+
+<script src="../js/progress-chart.js"></script>
 
 </head>
 
@@ -57,7 +60,10 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 
 <div class="container">   
   <div class="row text-center">
-    <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" />
+    <!-- <img src="../images/logo-sabor2015.png" alt="sabor2015.hr" class="header-logo" /> -->
+    <div ng-app="progressChart" ng-controller="progressChartCTRL">
+      <progress-chart></progress-chart>
+    </div>
   </div>
 </div>
 
