Make slider mobile friendly

--- a/static/html/faq.html
+++ b/static/html/faq.html
@@ -82,7 +82,7 @@
   <hr/>
   <div class="container">
   <footer>
-     <p>@referendum2013.hr</p>
+     <p>@sabor2015.hr</p>
   </footer>
   </div>  
   
