--- a/static/html/mape.html
+++ b/static/html/mape.html
@@ -104,7 +104,7 @@ href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css"> --
 
 <div class="container">
 <footer>
-<p>@referendum2013.hr</p>
+<p>@sabor2015.hr</p>
 </footer>
 </div>  
 
