Circular graph showing statistics of friends.

--- a/static/html/anketa.html
+++ b/static/html/anketa.html
@@ -120,6 +120,8 @@
           <p>Ukupno je <span id="total-votes" class="badge"></span> korisnika glasalo.</p>
           <votes-in-time></votes-in-time>
 
+          <statistics-of-friends-circle></statistics-of-friends-circle>
+
         </div>
       </div>
 
